<resources>
    <string name="app_name">Mafia</string>
    <string name="ed_name">Name</string>
    <string name="button_start">Start</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="room_name_hint">Enter room name</string>
    <string name="enter_doctor">Enter Doctor number</string>
    <string name="enter_mafia">Enter Mafia number</string>
    <string name="enter_sheriff">Enter Sheriff number</string>
    <string name="enter_citizens">Enter Citizens number</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_gcm_register">GCM Register</string>
    <string name="action_gcm_unregister">GCM Unregister</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Choose a username:</string>
    <string name="username">Username</string>
    <string name="login_submit">Join the Chat!</string>

    <string name="enter_new_channel">Enter new channel:</string>
    <string name="send_message">Send a message...</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="here_now">Here Now:</string>


</resources>
