<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/images"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kz.edu.sdu.galix.mafia.RoomsActivity"
    tools:showIn="@layout/activity_rooms">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:id="@+id/creator_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:id="@+id/room_name"
        android:hint="@string/room_name_hint"
        android:textColorHint="#fff"
        android:layout_below="@id/creator_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:textColor="@color/textColor"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mafia"
        android:textColorHint="#fff"
        android:hint="@string/enter_mafia"
        android:layout_below="@+id/room_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="#fff"
        android:ems="10"
        android:id="@+id/sheriff"
        android:hint="@string/enter_sheriff"
        android:layout_below="@+id/mafia"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColorHint="#fff"
        android:textColor="@color/textColor"
        android:hint="@string/enter_doctor"
        android:id="@+id/doctors"
        android:layout_below="@+id/sheriff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColorHint="#fff"
        android:id="@+id/citizens"
        android:layout_below="@+id/doctors"
        android:textColor="@color/textColor"
        android:hint="@string/enter_citizens" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/room_add"
        android:layout_below="@id/citizens"
        android:text="Create Lobby"

        android:onClick="create_room"
        />

</RelativeLayout>
